package com.softserve.edu06.pt.pt2;

public abstract class Car {

    private String model;
    private int maxSpeed;
    private int yearOfProduction;

    public abstract void run();

    public abstract void stop();

}
