package com.softserve.edu07.hw.hw2;

interface Vehicle {
}
